--- a/noisy/style.css
+++ b/noisy/style.css
@@ -1,8 +1,29 @@
 html, body {
   margin: 0;
+  
   padding: 0;
   background-color: rgba(12, 12, 66, 0.237);
+  font-size: 15px;
+  font-weight: 200;
+  font-style: italic;
+  
 }
+
 canvas {
   display: block;
+}
+.container{
+  margin-left: 0px;
+  padding: 10px;
+  border-color: rgb(8, 1, 12);
+  border-style: solid;
+  border-width: 3px;
+}
+.img1{
+  padding:10px;
+  border-color: rgb(8, 1, 12);
+  border-style: solid;
+  border-width: 3px;
+  
+  
 }
