--- a/noisy/style.css
+++ b/noisy/style.css
@@ -21,6 +21,7 @@ canvas {
 }
 .img1{
   padding:10px;
+  margin-top: 10px;
   border-color: rgb(8, 1, 12);
   border-style: solid;
   border-width: 3px;
