--- a/Reon_MusicMuseum/style.css
+++ b/Reon_MusicMuseum/style.css
@@ -1,20 +1,22 @@
 .canvas1Frame{
     width: 420px;
-    height:420px
-   
+    height:420px;
+    margin-left: 0px;
+    
 }
 .canvas2Frame{
     width: 420px;
-    height:420px
+    height:420px;
     
 }
 .canvas3Frame{
     width: 420px;
-    height:420px
+    height:420px;
+    margin-left: 800px;
 }
 .canvas4Frame{
     width: 420px;
-    height:420px
+    height:420px;
 }
 
 iframe{
@@ -24,10 +26,18 @@ html, body {
     margin: 0;
     
     padding: 0;
-    background-color: rgba(37, 215, 185, 0.237);
-    font-size: 15px;
-    font-weight: 200;
-    font-style: italic;
+    background-color: rgba(6, 155, 241, 0.105);
+   
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     
   }
-  
+  text {
+    
+    font-size: 15px;
+    font-weight: 200;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+  }
+  a{
+      font-size: 30px;
+  }
